Use java 21 and project loom